# ayudantias

./: .gitignore  404.html  CNAME  README.md  index.html  sitemap.xml
assets/css/: styles.d2c7cbfd.css
assets/js/: 01a5f747.2796da8b.js  0f52a6c6.6c812eda.js  14bd4fd7.e4833c96.js  14eb3368.65cad724.js  15ceff4f.a7843899.js  1757c372.cae1a547.js  17896441.1fa4b610.js  17a2e993.6744a339.js  1df93b7f.839354ce.js  1e0f126d.407897e5.js  25b6db1f.53ad60fd.js  26a3859a.b190e9bd.js  27545243.ca7f05a3.js  2be2f879.221c9689.js  2ea1f771.893faad6.js  2fc28943.96834b73.js  3260.b5274327.js  368112e4.8fb7a637.js  3d1fea4c.7e290dde.js  3d95ebd9.8fedce17.js  4022e3e5.8298cfa2.js  40295952.90fa4e87.js  45cf4710.b8094877.js  45e1e64c.20c3cbbd.js  460e4045.9af6e149.js  472c14f8.994cf5b4.js  481b50cf.0965c72d.js  4aeddc3c.369ec65e.js  4ffd2407.9a2321e5.js  50cfb3b5.5e280f89.js  51430923.fa77179c.js  52fe7e25.d5e0969e.js  6d70d299.80a54243.js  7125f1f8.9cc75d8a.js  7328.6ab07522.js  825bf767.e96a3bc2.js  88cc267b.59f74a1c.js  8e270e36.929cf9ab.js  935f2afb.ce8f044c.js  9834bdcf.b85e290a.js  (+24 more)
docs/: docusaurus.config.js  package.json
docs/category/clases/: index.html
docs/category/fundamentos-de-algoritmos/: index.html
docs/category/fundamentos-de-programacion/: index.html
docs/category/interfaz-gráfica/: index.html
docs/category/introducción-a-la-poo/: index.html
docs/category/módulo-1/: index.html
docs/category/módulo-2/: index.html
docs/category/módulo-3/: index.html
docs/category/programacion-orientada-a-objetos/: index.html
docs/category/relaciones/: index.html
docs/category/unidad-1/: index.html
docs/category/unidad-2/: index.html
docs/programacion-orientada-objetos/: index.html
gists/fundamentos-algoritmos/: tips-tuplas.md
markdown-page/: index.html
resoluciones/01-2022/icd1342-fundamentos-programacion/: CMakeLists.txt
resoluciones/01-2022/icd1342-fundamentos-programacion/1.1.-estructura-secuencial-y-selectiva/: ejercicio1.c  ejercicio2.c  ejercicio3.c  ejercicio4.c  ejercicio5.c
resoluciones/01-2022/icd1342-fundamentos-programacion/1.2.-estructuras-iterativas/: ejercicio1.c  ejercicio2.c  ejercicio3.c  ejercicio4.c
resoluciones/01-2022/icd1342-fundamentos-programacion/2.1.-funciones/: ejercicio1.c  ejercicio2.c  ejercicio3.c
resoluciones/01-2022/icd1342-fundamentos-programacion/2.2.-programacion-modular/: ejercicio1.c  ejercicio2.c  ejercicio3.c  ejercicio4.c  ejercicio5.c
resoluciones/01-2022/icd1342-fundamentos-programacion/2.3.-recursividad/: ejercicio1.c  ejercicio2.c  ejercicio3.c  ejercicio4.c  ejercicio5.c  ejercicio6.c
resoluciones/01-2022/icd1342-fundamentos-programacion/3.1-vectores-estaticos/: ejercicio1.c  ejercicio2.c  ejercicio3.c  ejercicio4.c
resoluciones/01-2022/icd1342-fundamentos-programacion/3.2.-vectores-dinamicos/: ejercicio1a.c  ejercicio1b.c  ejercicio2.c
resoluciones/01-2022/icd1342-fundamentos-programacion/3.3.-tarea-2/: ejercicio1a.c  ejercicio1b.c  ejercicio2.c  ejercicio3.c
resoluciones/01-2022/icd1342-fundamentos-programacion/4.1.-ordenamiento/: ejemplo.c  ejercicio1.c  ejercicio2.c
resoluciones/01-2022/icd1342-fundamentos-programacion/4.2.-preparacion-tarea-3/: casos-ej1.txt  casos-ej2.txt  ejercicio1.c  ejercicio2.c
(+208 files in other folders)
