cmake_minimum_required(VERSION 3.21)
project(icd1342_fundamentos_programacion C)

set(CMAKE_C_STANDARD 99)

# Test
add_executable(Test test.c)

################################# | Unidad 1 | #################################

# Ayudantía 1
add_executable(U1Ay1Ej1
        1.1.-estructura-secuencial-y-selectiva/ejercicio1.c)
add_executable(U1Ay1Ej2
        1.1.-estructura-secuencial-y-selectiva/ejercicio2.c)
add_executable(U1Ay1Ej3
        1.1.-estructura-secuencial-y-selectiva/ejercicio3.c)
add_executable(U1Ay1Ej4
        1.1.-estructura-secuencial-y-selectiva/ejercicio4.c)
add_executable(U1Ay1Ej5
        1.1.-estructura-secuencial-y-selectiva/ejercicio5.c)

# Ayudantía 2
add_executable(U1Ay2Ej1
        1.2.-estructuras-iterativas/ejercicio1.c)
add_executable(U1Ay2Ej2
        1.2.-estructuras-iterativas/ejercicio2.c)
add_executable(U1Ay2Ej3
        1.2.-estructuras-iterativas/ejercicio3.c)
add_executable(U1Ay2Ej4
        1.2.-estructuras-iterativas/ejercicio4.c)

################################# | Unidad 2 | #################################

# Ayudantía 3
add_executable(U2Ay3Ej1
        2.1.-funciones/ejercicio1.c)
add_executable(U2Ay3Ej2
        2.1.-funciones/ejercicio2.c)
add_executable(U2Ay3Ej3
        2.1.-funciones/ejercicio3.c)

# Ayudantía 4
add_executable(U2Ay4Ej1
        2.2.-programacion-modular/ejercicio1.c)
add_executable(U2Ay4Ej2
        2.2.-programacion-modular/ejercicio2.c)
add_executable(U2Ay4Ej3
        2.2.-programacion-modular/ejercicio3.c)
add_executable(U2Ay4Ej4
        2.2.-programacion-modular/ejercicio4.c)
add_executable(U2Ay4Ej5
        2.2.-programacion-modular/ejercicio5.c)

# Ayudantía 5
add_executable(U2Ay5Ej1
        2.3.-recursividad/ejercicio1.c)
add_executable(U2Ay5Ej2
        2.3.-recursividad/ejercicio2.c)
add_executable(U2Ay5Ej3
        2.3.-recursividad/ejercicio3.c)
add_executable(U2Ay5Ej4
        2.3.-recursividad/ejercicio4.c)
add_executable(U2Ay5Ej5
        2.3.-recursividad/ejercicio5.c)
add_executable(U2Ay5Ej6
        2.3.-recursividad/ejercicio6.c)

################################# | Unidad 3 | #################################

# Ayudantía 6
add_executable(U3Ay6Ej1
        3.1-vectores-estaticos/ejercicio1.c)
add_executable(U3Ay6Ej2
        3.1-vectores-estaticos/ejercicio2.c)
add_executable(U3Ay6Ej3
        3.1-vectores-estaticos/ejercicio3.c)
add_executable(U3Ay6Ej4
        3.1-vectores-estaticos/ejercicio4.c)
add_executable(U3Ay6
        3.1-vectores-estaticos/ejercicio.c)

# Ayudantía 7
add_executable(U3Ay7Ej1a
        3.2.-vectores-dinamicos/ejercicio1a.c)
add_executable(U3Ay7Ej1b
        3.2.-vectores-dinamicos/ejercicio1b.c)
add_executable(U3Ay7Ej2
        3.2.-vectores-dinamicos/ejercicio2.c)
add_executable(U3Ay7Ej3
        3.2.-vectores-dinamicos/ejercicio3.c)
add_executable(U3Ay7Ej4
        3.2.-vectores-dinamicos/ejercicio4.c)

# Ayudantía 8
add_executable(U3Ay8Ej1a
        3.3.-tarea-2/ejercicio1a.c)
add_executable(U3Ay8Ej1b
        3.3.-tarea-2/ejercicio1b.c)
add_executable(U3Ay8Ej2
        3.3.-tarea-2/ejercicio2.c)
add_executable(U3Ay8Ej3
        3.3.-tarea-2/ejercicio3.c)
